Created pie chart for budget

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-google-charts": "^5.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
